fix for BUG#691 (4.0 mysqlbinlog couldn't read 3.23 binlog). Safe parenthesis.